# hated-hater

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dataset/: cleanup.ipynb
src/hated_hater/: main.py  paths.py
